One game per room, refactor, buttons, bot overlap bug fix

--- a/BotBash.Server/wwwroot/css/style.css
+++ b/BotBash.Server/wwwroot/css/style.css
@@ -57,3 +57,38 @@ body {
     background-color: #0f0;
     color: white;
 }
+
+#GameOverModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+#GameOverModal h2 {
+    margin-bottom: 20px;
+    color: #0f0;
+}
+
+button {
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    border: 2px solid #0f0;
+    border-radius: 3px;
+    cursor: pointer;
+    background-color: black;
+    color: #0f0;
+}
+
+button :hover {
+    background-color: rgb(50, 50, 50);
+}
